validate: Addition of support for setting base-time/start-time/system-clock broke tests
The following discussion from !5803 (merged) should be addressed:
-
@slomo started a discussion: validate: scenario: Add a way to set pipeline base-time, start-time and force using the system clock
This commit breaks the tests in the Rust bindings:
(gstreamer_validate-91ddf00dad114b1e:2044224): GStreamer-CRITICAL **: 10:07:29.787: gst_structure_get_value: assertion 'structure != NULL' failed Thread 2 "action_type::te" received signal SIGTRAP, Trace/breakpoint trap. (gdb) bt #0 g_logv (log_domain=0x7ffff7f653b0 "GStreamer", log_level=G_LOG_LEVEL_CRITICAL, format=<optimized out>, args=args@entry=0x7ffff7046b70) at ../glib/gmessages.c:1423 #1 0x00007ffff7c97463 in g_log (log_domain=<optimized out>, log_level=log_level@entry=G_LOG_LEVEL_CRITICAL, format=format@entry=0x7ffff7cff280 "%s: assertion '%s' failed") at ../glib/gmessages.c:1461 #2 0x00007ffff7c986dd in g_return_if_fail_warning (log_domain=<optimized out>, pretty_function=<optimized out>, expression=<optimized out>) at ../glib/gmessages.c:2930 #3 0x00007ffff7f27c8d in gst_structure_get_value (structure=<optimized out>, fieldname=<optimized out>) at ../subprojects/gstreamer/gst/gststructure.c:1129 #4 0x00007ffff7e41189 in gst_validate_utils_get_clocktime (structure=0x3b0, name=0x0, retval=0x1, retval@entry=0x7ffff7046ca0) at ../subprojects/gst-devtools/validate/gst/validate/gst-validate-utils.c:977 #5 0x00007ffff7e2e6af in gst_validate_scenario_new (runner=<optimized out>, pipeline=<optimized out>, scenario_name=0x7ffff04d7b10 "/tmp/.tmpxGgp4C", structures=<optimized out>) at ../subprojects/gst-devtools/validate/gst/validate/gst-validate-scenario.c:5931 #6 0x00005555555b2333 in gstreamer_validate::auto::scenario::Scenario::factory_create<gstreamer_validate::auto::runner::Runner, gstreamer::auto::pipeline::Pipeline> (runner=0x7ffff7047228, pipeline=0x7ffff7047230, scenario_name=...) at gstreamer-validate/src/auto/scenario.rs:42 #7 0x00005555555ae0db in gstreamer_validate::action_type::tests::test_action_types () at gstreamer-validate/src/action_type.rs:288 #8 0x00005555555b1677 in gstreamer_validate::action_type::tests::test_action_types::{closure#0} () at gstreamer-validate/src/action_type.rs:253 #9 0x00005555555b09f6 in core::ops::function::FnOnce::call_once<gstreamer_validate::action_type::tests::test_action_types::{closure_env#0}, ()> () at /rustc/82e1608dfa6e0b5569232559e3d385fea5a93112/library/core/src/ops/function.rs:250 #5 0x00007ffff7e2e6af in gst_validate_scenario_new (runner=<optimized out>, pipeline=<optimized out>, scenario_name=0x7ffff04d7b10 "/tmp/.tmpxGgp4C", structures=<optimized out>) at ../subprojects/gst-devtools/validate/gst/validate/gst-validate-scenario.c:5931 5931 if (gst_validate_utils_get_clocktime (scenario->description, "base-time", (gdb) print scenario->description $1 = (GstStructure *) 0x0
CC @thiblahute