validate: scenario: Do not use a NULL scenario description structure

The scenario meta is optional and we have to take that into account.

Fixes: https://gitlab.freedesktop.org/gstreamer/gstreamer/-/issues/3199
Part-of: <https://gitlab.freedesktop.org/gstreamer/gstreamer/-/merge_requests/5892>